--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,19 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/jsonwebtoken": "^9.0.9",
         "typescript": "^5.8.2"
     },
     "dependencies": {
+        "@solana/web3.js": "^1.98.0",
+        "@types/express": "^5.0.0",
+        "b58": "^4.0.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.11.0",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2"
     }
