--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.8.2",
+    "polyfills": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
